# Financial-Record

./: .gitignore  README.md  construct.py  pyproject.toml  run.sh
fin_record/: analysis.py  config.py  logging_info.py  main.py  record.py  utils.py
