[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fin_record"
version = "0.1.5"
description = "A simple CLI tool for recording financial transactions."
authors = [{ name = "Xiyuan Yang", email = "yangxiyan@sjtu.edu.cn" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
fin_record = "fin_record.main:main"

[tool.setuptools.packages.find]
include = ["fin_record"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
fin_record = ["config.yaml"]
